<resources>
    <string name="app_name">NASA-MD</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Swipe right to remove the input field</string>
    <string name="favourite">favourite</string>
    <string name="settings">settings</string>
    <string name="search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="day_before_yesterday">2 days ago</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="select_application_theme">Select application theme</string>
    <string name="space">Space</string>
    <string name="moon">Moon</string>
    <string name="mars">Mars</string>
    <string name="change_bottom_app_bar">Change bottom app bar</string>
    <string name="main_screen">Main screen</string>
    <string name="date">Date</string>
    <string name="dot">Dot</string>
    <string name="no_photo_text">There is no photo on this day, but you can watch the \'Video of the Day\'</string>
    <string name="watch_youtube_video">Watch youtube video</string>
    <string name="already_not_important">Не важное</string>
    <string name="show_details">Подробности</string>
    <string name="new_note_text">Новая заметка</string>
    <string name="enter_header">Введите заголовок заметки</string>
    <string name="note_header_helper_text">Введите ключевую фразу которая поможет вспомнить о чем данная заметка</string>
    <string name="note_helper_text">Распишите заметку по подробнее, длинна текста не ограничена</string>
    <string name="enter_text">Введите текст</string>
    <string name="error">Ошибка</string>
    <string name="reload">Перезагрузить</string>
    <string name="success_local_db">Успешная загрузка локальных данных из БД</string>
    <string name="choice_important_text">Пометить как важное</string>
    <string name="save_text">Сохранить</string>
    <string name="enter_key_word">Введите ключевое слово по поиску</string>
    <string name="only_important">Только важные</string>
    <string name="search_note">Поиск</string>
    <string name="home">Home</string>
    <string name="the_list_is_empty">The list is empty</string>
    <string name="enter_latitude">Enter latitude</string>
    <string name="enter_longitude">Enter longitude</string>
    <string name="find_satellite_photo">Find satellite photo</string>
    <string name="invalid_latitude">Latitude must be >4 characters</string>
    <string name="invalid_longitude">Longitude must be >4 characters</string>
    <string name="close">Close</string>
    <string name="favorite">Favorite</string>
    <string name="un_favorite">Un favorite</string>
    <string name="not_important">Not important</string>
    <string name="info">Info</string>
</resources>
