<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.main.fragments.NewNoteFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/new_note_text_view"
            style="@style/HeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_to_screen_edge"
            android:layout_marginTop="@dimen/double_padding_to_screen_edge"
            android:layout_marginEnd="@dimen/padding_to_screen_edge"
            android:text="@string/new_note_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.Chip
            android:id="@+id/is_important_chip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_to_screen_edge"
            android:layout_marginTop="@dimen/double_padding_to_screen_edge"
            android:layout_marginEnd="@dimen/padding_to_screen_edge"
            android:text="@string/choice_important_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_note_text_view" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/header_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_to_screen_edge"
            android:layout_marginTop="@dimen/double_padding_to_screen_edge"
            android:layout_marginEnd="@dimen/padding_to_screen_edge"
            android:hint="@string/enter_header"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:helperText="@string/note_header_helper_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/is_important_chip"
            app:shapeAppearance="@style/AppShapeAppearance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/header_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/note_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_to_screen_edge"
            android:layout_marginTop="@dimen/double_padding_to_screen_edge"
            android:layout_marginEnd="@dimen/padding_to_screen_edge"
            android:hint="@string/enter_text"
            app:helperText="@string/note_helper_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_input_layout"
            app:shapeAppearance="@style/AppShapeAppearance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/note_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_to_screen_edge"
            android:layout_marginTop="@dimen/double_padding_to_screen_edge"
            android:layout_marginEnd="@dimen/padding_to_screen_edge"
            android:layout_marginBottom="@dimen/note_bottom_margin"
            android:text="@string/save_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/note_input_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
